--- a/DataScienceProject.ipynb
+++ b/DataScienceProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0e17bdbb",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "761418b7",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "cc4ae7c2",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cdbb5200",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e5c253c0",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "id": "8f5e33b1",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9fb343dc",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
        "119  2013-01  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "id": "e9226933",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
        "4                40  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "id": "234ad94e",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
        "4        Волжский ТЦ \"Волга Молл\"        4"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "id": "5eeb289d",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "0ef24ab7",
    "metadata": {},
    "outputs": [
@@ -1001,13 +1001,13 @@
        "59                           Ярославль ТЦ \"Альтаир\"       59"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "shops.iloc[0:80,:]"
+    "shops.iloc[0:60,:]"
    ]
   },
   {
@@ -1016,6 +1016,431 @@
    "metadata": {},
    "source": [
     "After short analysis we can spot that the same shops repeated in this dataset several times"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2557250",
+   "metadata": {},
+   "source": [
+    "Checking for missing values is very important step in data quality check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a2ba78a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num of missing values in sales_train:  0\n",
+      "Num of missing values in items:  0\n",
+      "Num of missing values in shops:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Num of missing values in sales_train: \", train.isnull().sum().sum())\n",
+    "print(\"Num of missing values in items: \", items.isnull().sum().sum())\n",
+    "print(\"Num of missing values in shops: \", shops.isnull().sum().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2044f52",
+   "metadata": {},
+   "source": [
+    "There are no missing values what makes work with the dataset much easier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34a2f6ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num of duplicates in sales_train:  6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Num of duplicates in sales_train: \", train.duplicated().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5f02916",
+   "metadata": {},
+   "source": [
+    "Exploring some price statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "e9410002",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    2.935843e+06\n",
+      "mean     8.908535e+02\n",
+      "std      1.729801e+03\n",
+      "min     -1.000000e+00\n",
+      "25%      2.490000e+02\n",
+      "50%      3.990000e+02\n",
+      "75%      9.990000e+02\n",
+      "max      3.079800e+05\n",
+      "Name: item_price, dtype: float64\n",
+      "\n",
+      "There are negative price!\n",
+      "\n",
+      "count    2.935843e+06\n",
+      "mean     1.242641e+00\n",
+      "std      2.618837e+00\n",
+      "min     -2.200000e+01\n",
+      "25%      1.000000e+00\n",
+      "50%      1.000000e+00\n",
+      "75%      1.000000e+00\n",
+      "max      2.169000e+03\n",
+      "Name: item_cnt_day, dtype: float64\n",
+      "\n",
+      "There are returns!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Is there nagative price or cnt?\n",
+    "print(train['item_price'].describe())\n",
+    "negative_price = train[train['item_price'] <= 0]\n",
+    "print(\"\\nThere are negative price!\\n\" if len(negative_price) != 0 else \"\\nPrice is correct!\")\n",
+    "\n",
+    "print(train['item_cnt_day'].describe())\n",
+    "negative_cnt = train[train['item_cnt_day'] <= 0]\n",
+    "print(\"\\nThere are returns!\" if len(negative_cnt) != 0 else \"\\nCnt is correct!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "c53f62ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>date_block_num</th>\n",
+       "      <th>shop_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>item_price</th>\n",
+       "      <th>item_cnt_day</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-01-05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2552</td>\n",
+       "      <td>899.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2013-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>2013-01-23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2321</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2013-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>2013-01-07</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2199</td>\n",
+       "      <td>1449.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2013-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>807</th>\n",
+       "      <td>2013-01-02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2330</td>\n",
+       "      <td>599.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2013-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1041</th>\n",
+       "      <td>2013-01-13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>5034</td>\n",
+       "      <td>1989.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2013-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2934243</th>\n",
+       "      <td>2015-10-26</td>\n",
+       "      <td>33</td>\n",
+       "      <td>25</td>\n",
+       "      <td>3917</td>\n",
+       "      <td>449.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2015-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2934462</th>\n",
+       "      <td>2015-10-18</td>\n",
+       "      <td>33</td>\n",
+       "      <td>25</td>\n",
+       "      <td>4896</td>\n",
+       "      <td>6398.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2015-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2935263</th>\n",
+       "      <td>2015-10-05</td>\n",
+       "      <td>33</td>\n",
+       "      <td>25</td>\n",
+       "      <td>10039</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2015-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2935643</th>\n",
+       "      <td>2015-10-16</td>\n",
+       "      <td>33</td>\n",
+       "      <td>25</td>\n",
+       "      <td>7893</td>\n",
+       "      <td>2990.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2015-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2935779</th>\n",
+       "      <td>2015-10-07</td>\n",
+       "      <td>33</td>\n",
+       "      <td>25</td>\n",
+       "      <td>7087</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2015-10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7356 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              date  date_block_num  shop_id  item_id  item_price  \\\n",
+       "2       2013-01-05               0       25     2552       899.0   \n",
+       "148     2013-01-23               0       25     2321       999.0   \n",
+       "175     2013-01-07               0       25     2199      1449.0   \n",
+       "807     2013-01-02               0       25     2330       599.0   \n",
+       "1041    2013-01-13               0       25     5034      1989.0   \n",
+       "...            ...             ...      ...      ...         ...   \n",
+       "2934243 2015-10-26              33       25     3917       449.0   \n",
+       "2934462 2015-10-18              33       25     4896      6398.0   \n",
+       "2935263 2015-10-05              33       25    10039       249.0   \n",
+       "2935643 2015-10-16              33       25     7893      2990.0   \n",
+       "2935779 2015-10-07              33       25     7087       999.0   \n",
+       "\n",
+       "         item_cnt_day    month  \n",
+       "2                -1.0  2013-01  \n",
+       "148              -1.0  2013-01  \n",
+       "175              -1.0  2013-01  \n",
+       "807              -1.0  2013-01  \n",
+       "1041             -1.0  2013-01  \n",
+       "...               ...      ...  \n",
+       "2934243          -1.0  2015-10  \n",
+       "2934462          -1.0  2015-10  \n",
+       "2935263          -1.0  2015-10  \n",
+       "2935643          -1.0  2015-10  \n",
+       "2935779          -1.0  2015-10  \n",
+       "\n",
+       "[7356 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[train['item_cnt_day'] <= 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "3ea839b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1057907\n",
+      "date              2013-11-02 00:00:00\n",
+      "date_block_num                     10\n",
+      "shop_id                            12\n",
+      "item_id                          8023\n",
+      "item_price                       15.0\n",
+      "item_cnt_day                    -22.0\n",
+      "month                         2013-11\n",
+      "Name: 1057907, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_returns = train['item_cnt_day'].idxmin()\n",
+    "print(most_returns)\n",
+    "print(train.loc[most_returns])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "377da0e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    2.935843e+06\n",
+      "mean     1.242641e+00\n",
+      "std      2.618837e+00\n",
+      "min     -2.200000e+01\n",
+      "25%      1.000000e+00\n",
+      "50%      1.000000e+00\n",
+      "75%      1.000000e+00\n",
+      "max      2.169000e+03\n",
+      "Name: item_cnt_day, dtype: float64\n",
+      "\n",
+      "Amount of sales of one descrete item per day large than  100\n",
+      "Amount of such days:  138\n",
+      "\n",
+      "Amount of sales of one descrete item per day large than  200\n",
+      "Amount of such days:  38\n",
+      "\n",
+      "Amount of sales of one descrete item per day large than  300\n",
+      "Amount of such days:  23\n",
+      "\n",
+      "Amount of sales of one descrete item per day large than  400\n",
+      "Amount of such days:  19\n",
+      "\n",
+      "Amount of sales of one descrete item per day large than  500\n",
+      "Amount of such days:  12\n",
+      "\n",
+      "Amount of sales of one descrete item per day large than  600\n",
+      "Amount of such days:  5\n",
+      "\n",
+      "Amount of sales of one descrete item per day large than  700\n",
+      "Amount of such days:  2\n",
+      "\n",
+      "Amount of sales of one descrete item per day large than  800\n",
+      "Amount of such days:  2\n",
+      "\n",
+      "Amount of sales of one descrete item per day large than  900\n",
+      "Amount of such days:  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Is there too large number of sold items per day?\n",
+    "print(train['item_cnt_day'].describe())\n",
+    "for i in range(100,1000,100):\n",
+    "    print(\"\\nAmount of sales of one descrete item per day large than \", i)\n",
+    "    print(\"Amount of such days: \", len(train[train['item_cnt_day'] > i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc2c80fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are some unused ids\n",
+      "363\n",
+      "22170\n",
+      "21807\n",
+      "Empty DataFrame\n",
+      "Columns: [date, date_block_num, shop_id, item_id, item_price, item_cnt_day, month]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Checking for consistency\n",
+    "print(\"There are some unused ids\" if len(items) - len(train['item_id'].unique()) else \"Aboba\")\n",
+    "print(len(items['item_id'].unique()) - len(train['item_id'].unique()))\n",
+    "print(len(items['item_id'].unique()))\n",
+    "print(len(train['item_id'].unique()))\n",
+    "\n",
+    "print(train[train['item_id']>=22170]) #check for items which names we dont't know"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c07b539e",
+   "metadata": {},
+   "source": [
+    "We can draw a conclusion that we have some items that have never been used in the training dataset"
    ]
   }
  ],
